--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <a href="wwr/index.html">White Water Rafting Website</a>
             <a href="ice.html">ICE</a>
             <a href="#">About Me</a>
+            <a href="client_report.html">Client Report</a>
         </nav>
     </header>
     <main>
@@ -26,7 +27,18 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum aspernatur ex vel cumque laborum consectetur sint ducimus, reprehenderit tempora. Explicabo nulla perferendis quas voluptatem laborum id voluptatibus illum repellendus et?</p>
         <ul>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita accusantium obcaecati et quas, incidunt, nobis ex reiciendis dicta neque saepe veniam dolor unde quia, quasi culpa ea cumque eos maiores.</ul>
         <form action="">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet eum, dignissimos porro modi nulla quidem at reprehenderit rerum recusandae rem nihil unde id doloribus quos autem totam, omnis delectus? Ab!</form>
-        <table></table>
+        <table>
+            <tr>
+                <th></th>
+                <th></th>
+                <th></th>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
     </main>
     <footer>
         &copy; 2025 Caleb Bowden
