--- a/ice/favorite_devo/favorite_devo/favdevo.html
+++ b/ice/favorite_devo/favorite_devo/favdevo.html
@@ -16,13 +16,51 @@
     <main>
       <div class="content-box">
         <!-- Add your devotional content here -->
+         <h2>Favorite Devotionals</h2>
         <table>
-          <th>Favorite Devotionals</th>
-          <th>Speaker</th>
-          <th>Title</th>
-          <th>Location</th>
-          <th>Year</th>
+          <tr>
+            <th>Speaker</th>
+            <th>Title</th>
+            <th>Location</th>
+            <th>Year</th>
+          </tr>
+          <tr>
+            <td>President and Sister Meredith</td>
+            <td>"Preserving the Spirit of Ricks at BYU-Idaho"</td>
+            <td>I-Center</td>
+            <td>2025</td>
+          </tr>
+          <tr>
+            <td>Elder Clark G. and Sister Christine C. Gilbert</td>
+            <td>"Finding the Savior in the Proclamation"</td>
+            <td>I-Center</td>
+            <td>2025</td>
+          </tr>
+          <tr>
+            <td>Stephanie L. Colvin</td>
+            <td>"First Things First"</td>
+            <td>I-Center</td>
+            <td>2025</td>
+          </tr>
+          <tr>
+            <td>Elder Kim B. Clark</td>
+            <td>"In the Hands of the Lord"</td>
+            <td>I-Center</td>
+            <td>2025</td>
+          </tr>
         </table>
+        <h2>Add a devotional</h2>
+        <form>
+          <label>Speaker:</label><br>
+          <input type="text"><br>
+          <label>Title:</label><br>
+          <input type="text"><br>
+          <label>Location:</label><br>
+          <input type="text"><br>
+          <label>Year:</label><br>
+          <input type="text"><br><br>
+          <input type="submit" value="Submit">
+        </form>
       </div>
     </main>
   </div>
