--- a/ice.html
+++ b/ice.html
@@ -3,23 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caleb | WDD130 | Home</title>
+    <title>Caleb | WDD130 | ICE</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="wwr/index.html">White Water Rafting Website</a>
-            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-            <a href="positioning.html">Positioning Activity</a>
-            <a href="#">Personal Website</a>
-            <a href="#">Personal Siteplan</a>
+    <header class="header">
+        <nav class="header-row">
+            <a href="#" class="link">Home</a>
+            <a href="wwr/index.html" class="link">White Water Rafting Website</a>
+            <a href="ice.html" class="link">ICE</a>
+            <a href="#" class="link">About Me</a>
+            <a href="client_report.html" class="link">Client Report</a>
+            <h1>ICE Challenges</h1>
         </nav>
     </header>
     <main>
-        <h1>Prophet Card</h1>
-        <link rel="stylesheet" href="ice/nelson.html">
+        <h2>Prophet Card</h2>
+        <p>I created a card displaying information about President Nelson. I learned how to make text look like a quote.</p>
+        <a href="ice/prophet_cards/prophet_cards/nelson.html" target="_blank">Prophet Card</a>
         <h2>Apostles Spotlight</h2>
-        <link rel="stylesheet" href="ice/apostle_spotlight/apostles.html">
+        <p>I created a page with pictures of the First Presidency and Quorum of the Twelve Apostles. I learned how to make images round.</p>
+        <a href="ice/apostle_spotlight/apostles.html" target="_blank">Apostles Spotlight</a>
+        <h2>Favorite Devotionals</h2>
+        <p>I created a table of my favorite devotionals. I learned how to create a table.</p>
+        <a href="ice/favorite_devo/favorite_devo/favdevo.html" target="_blank">Favorite Devotionals</a>
+        <h2>Halloween</h2>
+        <p>I created a Halloween themed page. I learned how to change the background color.</p>
+        <a href="ice/halloween/halloween/index.html" target="_blank">Halloween</a>
+        <h2>Grid Flags</h2>
+        <p>I created flags of different countries. I learned how to use CSS grid.</p>
+        <a href="ice/grid_flags/flags.html" target="_blank">Grid Flags</a>
+        <h2>Positioning Activity</h2>
+        <p>I used CSS to solve six different challenges. I learned how to overlap elements.</p>
+        <a href="ice/positioning/positioning.html" target="_blank">Positioning Activity</a>
+        <h2>Image Gallery</h2>
+        <p>I used a photo editor to reduce the file size of different images. I learned how to change image sizes and file types using a photo editor.</p>
+        <a href="ice/gallery/gallery.html" target="_blank">Image Gallery</a>
+        <h2>Daily Feed Sign Up</h2>
+        <p>I created a form to sign up for a daily scripture feed. I learned how to create a form.</p>
+        <a href="ice/signup/signup.html" target="_blank">Daily Feed Sign Up</a>
     </main>
     <footer>
         &copy; 2025 Caleb Bowden
