--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="#">Home</a>
-            <a href="wwr/index.html">White Water Rafting Website</a>
-            <a href="ice.html">ICE</a>
-            <a href="#">About Me</a>
-            <a href="client_report.html">Client Report</a>
+    <header class="header">
+        <nav class="header-row">
+            <a href="#" class="link">Home</a>
+            <a href="wwr/index.html" class="link">White Water Rafting Website</a>
+            <a href="ice.html" class="link">ICE</a>
+            <a href="#" class="link">About Me</a>
+            <a href="client_report.html" class="link">Client Report</a>
+            <h1>Caleb Bowden</h1>
         </nav>
     </header>
     <main>
-        <h1>Caleb Bowden</h1>
+        <!--h1>Caleb Bowden</h1-->
         <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat doloribus unde, assumenda, corrupti harum optio repudiandae quasi expedita, sint deserunt explicabo consequuntur beatae voluptas repellendus aperiam nesciunt quam doloremque ratione.</h2>
         <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur iusto magni amet nisi quibusdam? Nam quasi veritatis itaque assumenda magni praesentium atque nostrum. Maxime, earum? Odio cumque corrupti iusto sed.</h3>
         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque nemo cupiditate dolor quos et voluptates non. Pariatur quam, incidunt corporis tempora, eveniet dolore est a, nesciunt necessitatibus ipsam reiciendis vel.</h4>
@@ -25,18 +26,51 @@
         <img src="" alt="Picture of me">
         <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias dolorum possimus ab, perferendis, impedit recusandae ad provident, necessitatibus molestias sapiente incidunt minus architecto qui aliquid deserunt quia voluptates veritatis! Soluta!</h6>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum aspernatur ex vel cumque laborum consectetur sint ducimus, reprehenderit tempora. Explicabo nulla perferendis quas voluptatem laborum id voluptatibus illum repellendus et?</p>
-        <ul>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita accusantium obcaecati et quas, incidunt, nobis ex reiciendis dicta neque saepe veniam dolor unde quia, quasi culpa ea cumque eos maiores.</ul>
-        <form action="">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet eum, dignissimos porro modi nulla quidem at reprehenderit rerum recusandae rem nihil unde id doloribus quos autem totam, omnis delectus? Ab!</form>
+        <!--ul>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita accusantium obcaecati et quas, incidunt, nobis ex reiciendis dicta neque saepe veniam dolor unde quia, quasi culpa ea cumque eos maiores.</ul-->
+        <form class="form">
+          <label>Name:</label><br>
+          <input type="text"><br>
+          <label>Email:</label><br>
+          <input type="text"><br>
+          <label>Phone Number:</label><br>
+          <input type="text"><br><br>
+          <input type="submit" value="Submit">
+        </form>
         <table>
             <tr>
-                <th></th>
-                <th></th>
-                <th></th>
+                <th>Class</th>
+                <th>Time</th>
+                <th>Teacher</th>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>Web Development</td>
+                <td>MW 10:15-11:15</td>
+                <td>Brother Phillips</td>
+            </tr>
+            <tr>
+                <td>Programming with Functions</td>
+                <td>MW 11:30-12:30</td>
+                <td>Brother Barzee</td>
+            </tr>
+            <tr>
+                <td>Teachings of the Book of Mormon</td>
+                <td>MW 2:00-3:00</td>
+                <td>Brother Ricks</td>
+            </tr>
+            <tr>
+                <td>Computer Systems</td>
+                <td>TR 10:15-11:15</td>
+                <td>Brother Turley</td>
+            </tr>
+            <tr>
+                <td>Experience BYU-Idaho</td>
+                <td>T 12:45-1:45</td>
+                <td>Brother Burns</td>
+            </tr>
+            <tr>
+                <td>Writing/Reasoning Foundation</td>
+                <td>TR 2:30-4:00</td>
+                <td>Brother Head</td>
             </tr>
         </table>
     </main>
